# todo-rs

./: .gitignore  Cargo.toml  diesel.toml
migrations/2025-02-09-184357_create_todos/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs
src/domain/: mod.rs  todo.rs
src/errors/: mod.rs
src/routes/: mod.rs
src/routes/todo/: get.rs  mod.rs  post.rs  put.rs
src/utils/: axum_json.rs  axum_path.rs  db.rs  mod.rs
src/utils/errors/: app_errors.rs  axum_errors.rs  mod.rs
