[package]
name = "todo-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
anyhow = "1.0.51"
axum = "0.8.1"
diesel = { version = "2.2.7", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
    "chrono",
    "r2d2",
] }
# build libsqlite3 as part of the build process
# uncomment this line if you run into setup issues
libsqlite3-sys = { version = "0.31", features = ["bundled"] }
dotenvy = "0.15"
chrono = { version = "0.4.39", features = ["serde"] }
